# matlap

./: .gitignore  AGENTS.md  README.md  pyproject.toml
matlap/: __init__.py  adaptive.py  core.py  cv.py  elbo.py  faem.py  ldlt_cuda.py  linalg.py  mcmc.py  prox_noise.py  proximal.py  scoring.py  simulate.py  taylor.py  vi.py
matlap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paper/: cavi_contraction_proof.tex  contraction_fixed.tex  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.tex  main.tex.blg  nnd_singular_values.ipynb  proximal_taylor_noise_models.tex  references.bib  splicing_proximal_analysis.tex  taylor_heteroskedastic_unknown_homoskedastic_noise.tex  taylor_homoskedastic_unknown_noise.tex
refs/: nnd_mcmc.tex  nnd_mcmc_notes.aux  nnd_mcmc_notes.fdb_latexmk  nnd_mcmc_notes.fls  nnd_mcmc_notes.tex
results/: benchmark_10k.csv  benchmark_10k.md  benchmark_10k_gpu.csv  benchmark_10k_gpu.md  benchmark_10k_gpu_iso_fixed.csv  benchmark_10k_gpu_iso_fixed.md  benchmark_iso_rerun.csv  benchmark_iso_rerun.md  benchmark_lambda_taylor_gpu.csv  benchmark_lambda_taylor_gpu.md  benchmark_prox_noise_effective_vs_base_30x30.csv  benchmark_prox_noise_effective_vs_base_30x30.md  benchmark_prox_noise_effective_vs_base_30x30_raw.csv  benchmark_proximal_lambda_cv_taylor_100x1000.csv  benchmark_proximal_lambda_cv_taylor_100x1000.md  benchmark_proximal_lambda_cv_taylor_100x1000_raw.csv  benchmark_with_faem.csv  benchmark_with_faem.md  fa_comparison.csv  fa_comparison.md  lambda_study.csv  lambda_study.md  missing_study.csv  missing_study.md  (+4 more)
(+57 files in other folders)
