[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "matlap"
version = "0.1.0"
description = "Bayesian matrix denoising via CAVI with a Matrix Laplace prior"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["matlap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
